--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,20 +1,46 @@
-# upgrade $TERM
-set -g default-terminal "xterm-256color"
+unbind C-b
+set-option -g prefix C-a
 
-set -g status-style 'bg=#282c34  fg=#5eacd3'
+set -g mouse on
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-overrides ",xterm*:RGB"
+set-option -sg escape-time 10
+set-option -g focus-events on
 
-bind r source-file ~/.tmux.conf
+# set -g lock-after-time 300
+# set -g lock-command "neo -aD --speed=3.0 --color=gray --charset=greek --maxdpc=2 --glitchpct=2 --lingerms=1,500 -F --density=0.55 --screensaver"
+
 set -g base-index 1
 
 set-window-option -g mode-keys vi
-bind -T copy-mode-vi v send-keys -X begin-selection
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
-# vim-like pane switching
-bind -r ^ last-window
+bind -r r source-file ~/.tmux.conf
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-bind-key -r i run-shell "tmux neww tmux-cht.sh"
+
+# This tmux statusbar config was created by tmuxline.vim
+# on Sun, 15 May 2022
+
+set -g status-justify "left"
+set -g status "on"
+set -g status-left-style "none"
+set -g status-position bottom
+set -g message-command-style "fg=#ddc7a1,bg=#5b534d"
+set -g status-right-style "none"
+set -g pane-active-border-style "fg=#a89984"
+set -g status-style "none,bg=#3c3836"
+set -g message-style "fg=#ddc7a1,bg=#5b534d"
+set -g pane-border-style "fg=#5b534d"
+set -g status-right-length "100"
+set -g status-left-length "100"
+setw -g window-status-activity-style "none"
+setw -g window-status-separator ""
+setw -g window-status-style "none,fg=#ddc7a1,bg=#3c3836"
+set -g status-left "#[fg=#32302f,bg=#a89984,bold] #S #[fg=#a89984,bg=#3c3836,nobold,nounderscore,noitalics]"
+set -g status-right "#[fg=#5b534d,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#5b534d] %Y-%m-%d  %H:%M #[fg=#a89984,bg=#5b534d,nobold,nounderscore,noitalics]#[fg=#32302f,bg=#a89984,bold] "
+setw -g window-status-format "#[fg=#ddc7a1,bg=#3c3836] #I #[fg=#ddc7a1,bg=#3c3836] #W "
+setw -g window-status-current-format "#[fg=#3c3836,bg=#5b534d,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#5b534d] #I #[fg=#ddc7a1,bg=#5b534d] #W #[fg=#5b534d,bg=#3c3836,nobold,nounderscore,noitalics]"
+
