drag and drop from work mac

--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -7,12 +7,15 @@ $git_state\
 $git_status\
 $git_metrics\
 $python\
+$conda\
 $fill\
-$cmd_duration $jobs\
+$cmd_duration
 $line_break\
 $character\
 $shell\
 """
+
+add_newline = false
 
 [fill]
 symbol = " "
@@ -27,12 +30,13 @@ symbol = " "
 symbol = " "
 
 [conda]
-symbol = " "
-format = '[$symbol$enironment](dimmend green) '
+symbol = "🐍 "
+format = '[$symbol$environment](dimmend green) '
 
 [cmd_duration]
 min_time = 500
 format = 'Run time [$duration](bold yellow)'
+disabled = false
 
 [dart]
 symbol = " "
@@ -40,7 +44,8 @@ symbol = " "
 [directory]
 style = "bold purple"
 read_only = " 󰌾"
-truncation_length = 2
+truncation_length = 3
+# truncation_symbol = '..../'
 
 [docker_context]
 symbol = " "
@@ -80,6 +85,9 @@ symbol = " "
 
 [julia]
 symbol = " "
+
+[line_break]
+disabled = false
 
 [lua]
 symbol = " "
@@ -148,7 +156,8 @@ symbol = " "
 
 [python]
 symbol = " "
-format = '[${symbol}]($style)'
+pyenv_version_name = true
+format = '[$symbol $pyenv_version_name]($style)'
 
 [rlang]
 symbol = "󰟔 "
@@ -164,7 +173,8 @@ symbol = " "
 
 [shell]
 fish_indicator = '󰈺 '
-zsh_indicator = ' '
+# zsh_indicator = ' '
+zsh_indicator = ' '
 powershell_indicator = '_'
 unknown_indicator = 'mystery shell'
 style = 'cyan bold'
@@ -179,3 +189,33 @@ time_format = '%T'
 style_user = "bold white"
 format = '[$user]($style) @ '
 show_always = true
+
+[palettes.everforest]
+bg_dim = "#232a2e"
+bg0 = "#2d353b"
+bg1 = "#343f44"
+bg2 = "#3d484d"
+bg3 = "#475258"
+bg4 = "#4f585e"
+bg5 = "#56635f"
+bg_visual = "#543a48"
+bg_red = "#514045"
+bg_green = "#425047"
+bg_blue = "#3a515d"
+bg_yellow = "#4d4c43"
+
+fg = "#d3c6aa"
+red = "#e67e80"
+
+orange = "#e69875"
+yellow = "#dbbc7f"
+green = "#a7c080"
+aqua = "#83c092"
+blue = "#7fbbb3"
+purple = "#d699b6"
+grey0 = "#7a8478"
+grey1 = "#859289"
+grey2 = "#9da9a0"
+statusline1 = "#a7c080"
+statusline2 = "#d3c6aa"
+statusline3 = "#e67e80"
