--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,16 +1,13 @@
+
 unbind C-b
 set-option -g prefix C-a
 
-set -g mouse on
 set -g default-terminal "tmux-256color"
-set-option -sa terminal-overrides ",xterm*:RGB"
-set-option -sg escape-time 10
-set-option -g focus-events on
-
-# set -g lock-after-time 300
-# set -g lock-command "neo -aD --speed=3.0 --color=gray --charset=greek --maxdpc=2 --glitchpct=2 --lingerms=1,500 -F --density=0.55 --screensaver"
+set -g allow-passthrough on
 
 set -g base-index 1
+set -g mouse on
+set -g aggressive-resize on
 
 set-window-option -g mode-keys vi
 
@@ -20,27 +17,13 @@ bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
+set -g status-fg '#1e1e2e'   
+set -g status-bg '#F6F3E9'  
+set-option -g status-position top
+set -g status-right ''
+set -g status-justify centre
 
-# This tmux statusbar config was created by tmuxline.vim
-# on Sun, 15 May 2022
-
-set -g status-justify "left"
-set -g status "on"
-set -g status-left-style "none"
-set -g status-position bottom
-set -g message-command-style "fg=#ddc7a1,bg=#5b534d"
-set -g status-right-style "none"
-set -g pane-active-border-style "fg=#a89984"
-set -g status-style "none,bg=#3c3836"
-set -g message-style "fg=#ddc7a1,bg=#5b534d"
-set -g pane-border-style "fg=#5b534d"
-set -g status-right-length "100"
-set -g status-left-length "100"
-setw -g window-status-activity-style "none"
-setw -g window-status-separator ""
-setw -g window-status-style "none,fg=#ddc7a1,bg=#3c3836"
-set -g status-left "#[fg=#32302f,bg=#a89984,bold] #S #[fg=#a89984,bg=#3c3836,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=#5b534d,bg=#3c3836,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#5b534d] %Y-%m-%d  %H:%M #[fg=#a89984,bg=#5b534d,nobold,nounderscore,noitalics]#[fg=#32302f,bg=#a89984,bold] "
-setw -g window-status-format "#[fg=#ddc7a1,bg=#3c3836] #I #[fg=#ddc7a1,bg=#3c3836] #W "
-setw -g window-status-current-format "#[fg=#3c3836,bg=#5b534d,nobold,nounderscore,noitalics]#[fg=#ddc7a1,bg=#5b534d] #I #[fg=#ddc7a1,bg=#5b534d] #W #[fg=#5b534d,bg=#3c3836,nobold,nounderscore,noitalics]"
-
+# Remove the default * flag
+set -g window-status-format '#[fg=grey] #I-#W '
+set -g window-status-current-format '#[fg=teal,bold]👉 #I-#W '
+set -g status-left ' 🐚 '
